# nmrs

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
docs/src/api/: errors.md  network-manager.md
docs/src/appendix/: faq.md
docs/src/development/: contributing.md  testing.md
docs/src/examples/: wifi-auto-connect.md
docs/src/guide/: devices.md  error-handling.md  ethernet.md  profiles.md  wifi-connecting.md  wifi-hidden.md  wifi-wpa-psk.md
nmrs/: CHANGELOG.md  Cargo.toml
nmrs/examples/: custom_timeouts.rs
nmrs/src/agent/: builder.rs  iface.rs  request.rs
nmrs/src/api/: network_manager.rs
nmrs/src/api/builders/: bluetooth.rs  connection_builder.rs  openvpn_builder.rs  vlan.rs  vpn.rs  wifi.rs  wifi_builder.rs  wireguard_builder.rs
nmrs/src/api/models/: device.rs  monitor.rs  openvpn.rs  snapshot.rs  tests.rs  vlan.rs  wifi.rs
nmrs/src/core/: active_connection.rs  airplane.rs  bluetooth.rs  connection.rs  custom_connection.rs  device.rs  rfkill.rs  saved_connection.rs  scan.rs  state_wait.rs  vpn.rs
nmrs/src/core/ovpn_parser/: parser.rs
nmrs/src/monitoring/: bluetooth.rs  device.rs  events.rs  network.rs  settings.rs
nmrs/src/types/: constants.rs  device_type_registry.rs
nmrs/src/util/: cert_store.rs  test_utils.rs  validation.rs
nmrs/tests/: integration_test.rs
scripts/ci/: dbus-system.conf  run-networkmanager-tests.sh
