[package]
name = "nmrs"
version = "3.4.1"
authors = ["Akrm Al-Hakimi <alhakimiakrmj@gmail.com>"]
edition.workspace = true
rust-version = "1.90.0"
description = "A Rust library for NetworkManager over D-Bus"
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/nmrs"
keywords = ["networkmanager", "dbus", "wifi", "linux", "networking"]
categories = ["api-bindings", "asynchronous"]
readme = "README.md"

[dependencies]
log.workspace = true
zbus.workspace = true
zvariant.workspace = true
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true
futures.workspace = true
futures-timer.workspace = true
base64.workspace = true
tokio.workspace = true
async-trait.workspace = true
bitflags.workspace = true
zeroize = { version = "1.9.0", features = ["aarch64", "derive", "std"] }

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]

[lints]
workspace = true

[lib]
bench = false

[[example]]
name = "wifi_scan"
path = "examples/wifi_scan.rs"

[[example]]
name = "vpn_connect"
path = "examples/vpn_connect.rs"

[[example]]
name = "secret_agent"
path = "examples/secret_agent.rs"

[[example]]
name = "airplane_mode"
path = "examples/airplane_mode.rs"

[[example]]
name = "ap_list"
path = "examples/ap_list.rs"

[[example]]
name = "multi_wifi"
path = "examples/multi_wifi.rs"

[[example]]
name = "saved_list"
path = "examples/saved_list.rs"

[[example]]
name = "connectivity"
path = "examples/connectivity.rs"

[[example]]
name = "vpn_list"
path = "examples/vpn_list.rs"

[dev-dependencies]
serial_test = "3.5.0"
